<resources>
    <string name="app_name">Movies</string>

    <string name="title">Title</string>
    <string name="year">1900</string>

    //Labels
    <string name="label_title">Título</string>
    <string name="label_year">Ano</string>
    <string name="label_released">Data de lançamento</string>
    <string name="label_overview">Detalhes</string>
    <string name="label_trailer">Trailer</string>
    <string name="label_homepage">Homepage</string>
</resources>
